# funstuff

./: .gitignore  2017-software-engineer-course.md  CMakeLists.txt  ExprL.y  MainFunc.c  NameTable.c  README.md  SymTable.c  VSM.c  answer.md  api_pb2_grpc.py  codecheck.yml  docker-compose.yml  input.txt  requirements.txt  server.py  settings.py  tests.py
algorithm-basic/: README.md  anagram.py  isContained.py  linkedlist.py  powmod.py  prime.py  sort.py  stack.py  tree.py  triangle.py
app/: calculator.py  main.py
codecheck/: README.md
codecheck/codecheck-1015/: answer.md
codecheck/codecheck-2152/: answer.md  codecheck.yml
codecheck/codecheck-2160/: codecheck.yml  run.py
codecheck/codecheck-2366/: Dockerfile  README.md  circle.yml  requirements.txt  run.py
codecheck/codecheck-3536/: answer.md  circle.yml
codecheck/codecheck-3538/: answer.md
codecheck/codecheck-3608/: Dockerfile  README.md  circle.yml  package.json  requirements.txt
codecheck/codecheck-3849/: answer.md  index.py
codecheck/codecheck-969/: Procfile  README.md  account.json
compiler/2017/: prog2-1.y  prog5-1.l  prog5-1.y
compiler/2017/CntrlL/: CMakeLists.txt  CntrlL.l  CntrlL.y  JumpChain.c  LabelDef.c  SymTable.c  VSM.c  input.txt  result.txt
compiler/2017/FuncL/: CMakeLists.txt  FuncL.l  FuncL.y  MainFunc.c  SymTable.c  SymTable.h  VSM.c  asm.txt  input.txt  output.txt  test.nb
compiler/2017/kadai1/: CMakeLists.txt  input.txt  output2.txt  parser.y  parser2.y
db/: __init__.py  models.py
db/migrations/: 0001_initial.py  0002_auto_20170621_0958.py  0004_auto_20170622_0637.py  0006_auto_20170623_0641.py
internship-qualification/mercari-summer-internship-2017/: Dockerfile  README.md  api_pb2.py  docker-compose.yml  requirements.txt
null/: othello.c  othello_opengl.c  prime.c  simpson.c
null/crawler/: 163com2db.py  tm2db.py  tt2db.py
null/gamerch/: data.sql  ranking.sql  rare.sql
null/grifarm/: best.py  circle.py  circle_member.py  gacha.py  gift.py  invite.py  level.py  main.py  update.py
null/kkr-chart/: index.html
null/slatan/: slatan.py  users.py
null/twitter/: body2id.py  twmedia-dl.py
tomoyat1-benchmark/: benchmark.md  compile.sh  run.sh
tomoyat1-benchmark/clang35/: cmpl_clang35_O0.s  cmpl_clang35_O2.s  if_clang35_O0.s  if_clang35_O1.s  if_clang35_O2.s  switch_clang35_O0.s  switch_clang35_O1.s  switch_clang35_O2.s  testl_clang35_O0.s  testl_clang35_O3.s
tomoyat1-benchmark/gcc49/: cmpl_gcc49_O0.s  cmpl_gcc49_O1.s  cmpl_gcc49_O3.s  if_gcc49_O0.s  if_gcc49_O1.s  if_gcc49_O3.s  switch_gcc49_O0.s  (+5 more)
(+156 files in other folders)
